# vaf-am-build-01-ingestion

./: .env.example  .gitignore  GMAIL_SETUP.md  README.md  pyproject.toml  run.py
data/: documents.db  sample_earnings.txt
data/file_watch/: Sample_Fund_Factsheet.txt
press_pack/: PRESS_PACK.md
reports/: ingestion_report.json
src/: config.py  normaliser.py  store.py  summariser.py
src/auth/: gmail_auth.py
src/ingesters/: base.py  file_watch.py  gmail.py  pdf.py  rss.py  web.py
